--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,35 +8,25 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">test</a></td><td class="num">8</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">3</td><td class="num">1,359,217</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">44,295</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m0">SelectionUnitPeriod_and_verify_two_option_TC_214</a></td><td rowspan="1">1700489020764</td><td rowspan="1">1774</td></tr><tr class="failedeven"><td><a href="#m1">add_Spaces_Single_And_Carparking_Options_TC_213</a></td><td rowspan="1">1700488782078</td><td rowspan="1">206648</td></tr><tr class="failedeven"><td><a href="#m2">exportNewAddSpace_verifyCompleteRecords_TC_209</a></td><td rowspan="1">1700488408387</td><td rowspan="1">72848</td></tr><tr><th colspan="4">test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m3">exportSpacesGoogleSheet_TC_210</a></td><td rowspan="1">1700488484222</td><td rowspan="1">0</td></tr><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m4">addSpace_skippingFileds_TC_204</a></td><td rowspan="1">1700488062472</td><td rowspan="1">29981</td></tr><tr class="passedeven"><td><a href="#m5">multipleUsersWithMutlipleSelections_TC_203</a></td><td rowspan="1">1700487766299</td><td rowspan="1">265272</td></tr><tr class="passedeven"><td><a href="#m6">verifyDeleteSpace_TC_212</a></td><td rowspan="1">1700488665438</td><td rowspan="1">89937</td></tr><tr class="passedeven"><td><a href="#m7">verifyPopupAddSpace_TC_202</a></td><td rowspan="1">1700487721209</td><td rowspan="1">2117</td></tr><tr class="passedeven"><td><a href="#m8">verifySpaceData_afterEdit_TC_208</a></td><td rowspan="1">1700488244501</td><td rowspan="1">122717</td></tr><tr class="passedeven"><td><a href="#m9">verifySpaceData_fromTableData_TC_205</a></td><td rowspan="1">1700488123596</td><td rowspan="1">87084</td></tr><tr class="passedeven"><td><a href="#m10">verifySpacePage_Tc_201</a></td><td rowspan="1">1700487696015</td><td rowspan="1">87</td></tr><tr class="passedeven"><td><a href="#m11">verify_serachField_withSpaceName_TC_211</a></td><td rowspan="1">1700488519385</td><td rowspan="1">120325</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_7_RatesStorage</td><td><a href="#m0">createGroup_verifyGroup_TC_1101</a></td><td rowspan="1">1700747151659</td><td rowspan="1">14795</td></tr></tbody>
 </table>
-<h2>test</h2><h3 id="m0">com.marina.tests.Mod_2_SpaceTypes#SelectionUnitPeriod_and_verify_two_option_TC_214</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Arrays differ at element [2]: no text != $/period expected [no text] but found [$/period]
-	at com.marina.tests.Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214(Mod_2_SpaceTypes.java:262)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.marina.tests.Mod_2_SpaceTypes#add_Spaces_Single_And_Carparking_Options_TC_213</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Space Types are not getting created when adding single and then carparking spaces expected [true] but found [false]
-	at com.marina.tests.Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213(Mod_2_SpaceTypes.java:240)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.marina.tests.Mod_2_SpaceTypes#exportNewAddSpace_verifyCompleteRecords_TC_209</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of Proxy element for: DefaultElementLocator &apos;By.xpath: //button[text()=&apos;Excel Sheet&apos;]&apos; (tried for 60 second(s) with 500 milliseconds interval)
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:230)
-	at com.marina.actiondriver.Action.explicitWait(Action.java:800)
-	at com.marina.pages.SpaceTypesPage.exportDataToExcel(SpaceTypesPage.java:378)
-	at com.marina.tests.Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209(Mod_2_SpaceTypes.java:166)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//button[text()=&apos;Excel Sheet&apos;]&quot;}
+<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_7_RatesStorage#createGroup_verifyGroup_TC_1101</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;button type=&quot;button&quot; class=&quot;btn btn-secondary&quot; data-bs-dismiss=&quot;modal&quot; autocomplete=&quot;off&quot;&gt;...&lt;/button&gt; is not clickable at point (926, 701). Other element would receive the click: &lt;div class=&quot;preloader&quot;&gt;...&lt;/div&gt;
   (Session info: chrome=119.0.6045.160)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.9&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [1e91ac4968d42616dbd881fa00b9a602, findElement {using=xpath, value=//button[text()=&apos;Excel Sheet&apos;]}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 119.0.6045.160, chrome: {chromedriverVersion: 119.0.6045.105 (38c72552c5e..., userDataDir: C:\Users\TALHA~1.TAH\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50229}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50229/devtoo..., se:cdpVersion: 119.0.6045.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 1e91ac4968d42616dbd881fa00b9a602
+Command: [1e50443a423ebf6f8504258ced7a5374, clickElement {id=F677FDE8C675B25BEADEDB97BC70D063_element_310}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 119.0.6045.160, chrome: {chromedriverVersion: 119.0.6045.105 (38c72552c5e..., userDataDir: C:\Users\TALHA~1.TAH\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:64627}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:64627/devtoo..., se:cdpVersion: 119.0.6045.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (1e50443a423ebf6f8504258ced7a5374)] -&gt; xpath: //*[@id=&apos;modalAddSpaceType&apos;]/div/form/div/div[3]/button[1]]
+Session ID: 1e50443a423ebf6f8504258ced7a5374
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
@@ -44,30 +34,44 @@ Session ID: 1e91ac4968d42616dbd881fa00b9a602
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at jdk.proxy2/jdk.proxy2.$Proxy21.isDisplayed(Unknown Source)
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:304)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$000(ExpectedConditions.java:37)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:290)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:287)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:205)
-	... 31 more
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.marina.tests.Mod_2_SpaceTypes#exportSpacesGoogleSheet_TC_210</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method Mod_2_SpaceTypes.exportSpacesGoogleSheet_TC_210()[pri:11, instance:com.marina.tests.Mod_2_SpaceTypes@bae7dc0] depends on not successfully finished methods
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
+	at jdk.proxy2/jdk.proxy2.$Proxy21.click(Unknown Source)
+	at com.marina.pages.SpaceTypesAddTypesPage.adding_rates_group(SpaceTypesAddTypesPage.java:672)
+	at com.marina.tests.Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101(Mod_7_RatesStorage.java:41)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.marina.tests.Mod_2_SpaceTypes#addSpace_skippingFileds_TC_204</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.marina.tests.Mod_2_SpaceTypes#multipleUsersWithMutlipleSelections_TC_203</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.marina.tests.Mod_2_SpaceTypes#verifyDeleteSpace_TC_212</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.marina.tests.Mod_2_SpaceTypes#verifyPopupAddSpace_TC_202</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_afterEdit_TC_208</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_fromTableData_TC_205</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.marina.tests.Mod_2_SpaceTypes#verifySpacePage_Tc_201</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">com.marina.tests.Mod_2_SpaceTypes#verify_serachField_withSpaceName_TC_211</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at org.testng.TestRunner.privateRun(TestRunner.java:766)
+	at org.testng.TestRunner.run(TestRunner.java:587)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
+	at org.testng.TestNG.runSuites(TestNG.java:1039)
+	at org.testng.TestNG.run(TestNG.java:1007)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
