--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_2_SpaceTypes</td>
+<td>com.marina.tests.Mod_7_RatesStorage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SelectionUnitPeriod_and_verify_two_option_TC_214</td>
+<td>createGroup_verifyGroup_TC_1101</td>
 <td>regression smoke </td>
 </tr>
 <tr>
