--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]<br/></td></tr>
-<tr><td>smoke</td><td>Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@56cdfb3b]<br/></td></tr>
+<tr><td>smoke</td><td>Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101()[pri:1, instance:com.marina.tests.Mod_7_RatesStorage@56cdfb3b]<br/></td></tr>
 </table>
