--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--198704015\testng-customsuite.xml</span>
+                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-2127420106\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="createGroup_verifyGroup_TC_1101">createGroup_verifyGroup_TC_1101</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="newlyGroupCreated_RevisionHisotryEmpty_TC_1102">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -125,40 +125,12 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createGroup_verifyGroup_TC_1101">
-                  </a> <!-- createGroup_verifyGroup_TC_1101 -->
-                  <span class="method-name">createGroup_verifyGroup_TC_1101</span>
-                  <div class="stack-trace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;button type=&quot;button&quot; class=&quot;btn btn-secondary&quot; data-bs-dismiss=&quot;modal&quot; autocomplete=&quot;off&quot;&gt;...&lt;/button&gt; is not clickable at point (926, 701). Other element would receive the click: &lt;div class=&quot;preloader&quot;&gt;...&lt;/div&gt;
-  (Session info: chrome=119.0.6045.160)
-Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.9&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [1e50443a423ebf6f8504258ced7a5374, clickElement {id=F677FDE8C675B25BEADEDB97BC70D063_element_310}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 119.0.6045.160, chrome: {chromedriverVersion: 119.0.6045.105 (38c72552c5e..., userDataDir: C:\Users\TALHA~1.TAH\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:64627}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:64627/devtoo..., se:cdpVersion: 119.0.6045.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (1e50443a423ebf6f8504258ced7a5374)] -&gt; xpath: //*[@id=&apos;modalAddSpaceType&apos;]/div/form/div/div[3]/button[1]]
-Session ID: 1e50443a423ebf6f8504258ced7a5374
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at jdk.proxy2/jdk.proxy2.$Proxy21.click(Unknown Source)
-	at com.marina.pages.SpaceTypesAddTypesPage.adding_rates_group(SpaceTypesAddTypesPage.java:672)
-	at com.marina.tests.Mod_7_RatesStorage.createGroup_verifyGroup_TC_1101(Mod_7_RatesStorage.java:41)
+                  <a name="newlyGroupCreated_RevisionHisotryEmpty_TC_1102">
+                  </a> <!-- newlyGroupCreated_RevisionHisotryEmpty_TC_1102 -->
+                  <span class="method-name">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</span>
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.findElement(org.openqa.selenium.By)&quot; because &quot;this.action.driver&quot; is null
+	at com.marina.pages.RatesStorageNightlyPricePage.rate_nightly_rivision_history(RatesStorageNightlyPricePage.java:90)
+	at com.marina.tests.Mod_7_RatesStorage.newlyGroupCreated_RevisionHisotryEmpty_TC_1102(Mod_7_RatesStorage.java:75)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -190,7 +162,7 @@ Session ID: 1e50443a423ebf6f8504258ced7a5374
 
 </div> <!-- stack-trace -->
                   <em>
-(Creating Rate Group from Space Type, check rate group should be available)                  </em>
+(No Revision History should be available in newly created rate group)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -198,7 +170,7 @@ Session ID: 1e50443a423ebf6f8504258ced7a5374
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--198704015\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-2127420106\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -235,7 +207,7 @@ Session ID: 1e50443a423ebf6f8504258ced7a5374
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">createGroup_verifyGroup_TC_1101</span>
+                <span class="method-in-group-name">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -243,7 +215,7 @@ Session ID: 1e50443a423ebf6f8504258ced7a5374
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">createGroup_verifyGroup_TC_1101</span>
+                <span class="method-in-group-name">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -265,14 +237,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createGroup_verifyGroup_TC_1101')
+data.setCell(0, 1, 'newlyGroupCreated_RevisionHisotryEmpty_TC_1102')
 data.setCell(0, 2, 'com.marina.tests.Mod_7_RatesStorage')
-data.setCell(0, 3, 14795);
+data.setCell(0, 3, 8231);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -305,21 +277,21 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeTest</span>
-                <span class="method-start">473 ms</span>
+                <span class="method-start">719 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">createGroup_verifyGroup_TC_1101</span>
-                <span class="method-start">19462 ms</span>
+                <span class="method-name">newlyGroupCreated_RevisionHisotryEmpty_TC_1102</span>
+                <span class="method-start">20167 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">34272 ms</span>
+                <span class="method-start">28404 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">44802 ms</span>
+                <span class="method-start">31774 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
